--- a/4_airfoil_flow.ipynb
+++ b/4_airfoil_flow.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Flow Around An Airfoil\n",
     "\n",
-    "TODO: General Intro"
+    "Nothing to fill in here. Just read the code and the descriptions, let it run and play around with the input! "
    ]
   },
   {
@@ -212,7 +212,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Soluion Arrays"
+    "### Define Soluion Arrays\n",
+    "\n",
+    "We know this part from the 1D-example. Apart from arrays for the solution in the cells, we now also define arrays for the solution at the sides. It's the same values, just sorted differently, such that we can compute the flux over each side easily. For each side, we define one cell as the 'left' and one asthe 'right' cell. The accoridng arrays are called `u_left` and `u_right`."
    ]
   },
   {
@@ -227,7 +229,29 @@
     "up = np.zeros((n_cells, 4))\n",
     "# sides\n",
     "u_left = np.zeros((n_sides, 4))\n",
-    "u_right = np.zeros((n_sides, 4))\n",
+    "u_right = np.zeros((n_sides, 4))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Equation System\n",
+    "\n",
+    "We introduce indices that represent the variables which define the state of the air.\n",
+    "\n",
+    "We introduce functions to switch between conserved (`cons`) and primitive (`prim`) (i.e. easy to grasp) quantities.\n",
+    "\n",
+    "We define the same flux function as before (only with two velocity / momentum components), and the same function to get the fastest wave/signal speed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# define indices for variables defining state of the air: \n",
     "# conservative variables\n",
@@ -239,23 +263,7 @@
     "# DENS = 0 (already defined)\n",
     "VELX = 1  # velocity in x-direction\n",
     "VELY = 2  # velocity in y-direction\n",
-    "PRES = 3  # pressure"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initialize Solution "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "PRES = 3  # pressure\n",
     "\n",
     "def constoprim(u):\n",
     "    up = u.copy()\n",
@@ -264,7 +272,6 @@
     "    up[:,PRES] = 0.4*(u[:,ENER] - 0.5* u[:,DENS] * (up[:,VELX]**2 + up[:,VELY]**2) )\n",
     "    return up\n",
     "\n",
-    "\n",
     "def primtocons(up):\n",
     "    u = up.copy()\n",
     "    u[:,MOMX] = up[:,VELX] * up[:,DENS]\n",
@@ -272,50 +279,6 @@
     "    u[:,ENER] = up[:,PRES]*2.5 + 0.5* up[:,DENS] * (up[:,VELX]**2 + up[:,VELY]**2)\n",
     "    return up\n",
     "\n",
-    "freeflow_prim = np.zeros((1,4))\n",
-    "freeflow_prim[:,DENS] = 1.225  # kg/m^3\n",
-    "freeflow_prim[:,VELX] = airspeed   # m/s\n",
-    "freeflow_prim[:,VELY] = 0.     # m/s\n",
-    "freeflow_prim[:,PRES] = 101300 # Pascal (100000 Pa = 1bar)\n",
-    "\n",
-    "freeflow = primtocons(freeflow_prim)\n",
-    "\n",
-    "u[:,:] = freeflow\n",
-    "\n",
-    "\n",
-    "# calculate flux \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# rotation directions: \n",
-    "FWD = 1\n",
-    "BWD = -1\n",
-    "def rotate(a, dir=FWD): \n",
-    "    a[:,MOMX], a[:,MOMY] = a[:,MOMX]*normal[:,0] + dir*a[:,MOMY]*normal[:,1], a[:,MOMY]*normal[:,0] - dir*a[:,MOMX]*normal[:,1]\n",
-    "\n",
-    "\n",
-    "def fill_sides():\n",
-    "    # fill sides\n",
-    "    u_left[:,:] = u[side2cell[:,0],:]\n",
-    "    u_right[:,:] = u[side2cell[:,1],:]\n",
-    "\n",
-    "    # fill BC sides \n",
-    "    u_right[bc_outr,:] = freeflow\n",
-    "\n",
-    "    rotate(u_left, dir=FWD)\n",
-    "    rotate(u_right, dir=FWD)\n",
-    "\n",
-    "    u_right[bc_wall,:] = u_left[bc_wall,:] \n",
-    "    u_right[bc_wall,MOMX] *= -1\n",
-    "\n",
-    "    return u_left, u_right\n",
     "\n",
     "def flux(u, up):\n",
     "    f = np.zeros_like(u)\n",
@@ -326,7 +289,92 @@
     "    f[:,ENER] = up[:,VELX]*( u[:,ENER] + up[:,PRES] )\n",
     "    return f\n",
     "\n",
-    "def calc_flux(): \n",
+    "\n",
+    "def speed_of_sound(up): \n",
+    "    return np.sqrt(1.4 * up[:,PRES] / up[:,DENS])\n",
+    "\n",
+    "def absolute_velocity(up): \n",
+    "    return np.linalg.norm(up[:,VELX:VELY+1], axis=1)\n",
+    "\n",
+    "def fastest_wave(up): \n",
+    "    return speed_of_sound(up) + absolute_velocity(up)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize Solution \n",
+    "\n",
+    "We initialize the base condition of the surrounding air with standard conditions at sea level. The horizontal velocity is the head wind, i.e. the speed of our airfoil. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "freeflow_prim = np.zeros((1,4))\n",
+    "freeflow_prim[:,DENS] = 1.225  # kg/m^3\n",
+    "freeflow_prim[:,VELX] = airspeed   # m/s\n",
+    "freeflow_prim[:,VELY] = 0.     # m/s\n",
+    "freeflow_prim[:,PRES] = 101300 # Pascal (100000 Pa = 1bar)\n",
+    "\n",
+    "# switch to conservative\n",
+    "freeflow = primtocons(freeflow_prim)\n",
+    "\n",
+    "# copy to solution as starting condition\n",
+    "u[:,:] = freeflow"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Important Stuff\n",
+    "\n",
+    "Now we introduce some functions which we can later plug together to run our simulation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# rotation directions: \n",
+    "FWD = 1\n",
+    "BWD = -1\n",
+    "def rotate(a, dir=FWD): \n",
+    "    a[:,MOMX], a[:,MOMY] = a[:,MOMX]*normal[:,0] + dir*a[:,MOMY]*normal[:,1], a[:,MOMY]*normal[:,0] - dir*a[:,MOMX]*normal[:,1]\n",
+    "\n",
+    "\n",
+    "def fill_sides(u):\n",
+    "    \n",
+    "    # fill sides\n",
+    "    u_left[:,:] = u[side2cell[:,0],:]\n",
+    "    u_right[:,:] = u[side2cell[:,1],:]\n",
+    "\n",
+    "    # fill outer boundary sides \n",
+    "    u_right[bc_outr,:] = freeflow\n",
+    "\n",
+    "    # rotate into local (side-normal) coordinate system\n",
+    "    rotate(u_left, dir=FWD)\n",
+    "    rotate(u_right, dir=FWD)\n",
+    "\n",
+    "    # wall boundary: copy state and inverse wall-normal velocity\n",
+    "    u_right[bc_wall,:] = u_left[bc_wall,:] \n",
+    "    u_right[bc_wall,MOMX] *= -1\n",
+    "\n",
+    "    return u_left, u_right\n",
+    "\n",
+    "\n",
+    "def calc_flux(u_left, u_right): \n",
     "    up_left = constoprim(u_left)\n",
     "    up_right = constoprim(u_right)\n",
     "\n",
@@ -334,32 +382,24 @@
     "    f_right = flux(u_right, up_right) \n",
     "    f = 0.5 * (f_left + f_right) \n",
     "\n",
-    "    a = np.maximum(lmbda(up_left), lmbda(up_right))\n",
+    "    a = np.maximum(fastest_wave(up_left), fastest_wave(up_right))\n",
     "    stabilization = -0.5 * a[...,np.newaxis] * (u_right-u_left)\n",
     "    f = f + stabilization\n",
     "    return f\n",
     "\n",
-    "\n",
-    "def sos(up): \n",
-    "    return np.sqrt(1.4*up[:,PRES]/up[:,DENS])\n",
-    "\n",
-    "\n",
-    "def lmbda(up): \n",
-    "    return sos(up)+np.sqrt(up[:,VELX]**2+up[:,VELY]**2)\n",
+    "def check_state_physical(u):\n",
+    "    up = constoprim(u)\n",
+    "    if np.min(up[:,DENS]) < 0. or np.min(up[:,PRES]) < 0.:   \n",
+    "        raise Exception(\"Negative pressure or density encountered!\")\n",
     "\n",
     "def timestep(up, min_cell_size): \n",
-    "    return 0.99*min_cell_size/np.max(lmbda(up))\n",
+    "    return 0.99 * min_cell_size / np.max(fastest_wave(up))\n",
     "\n",
     "def change_of_state(f): \n",
     "\n",
     "    # rotate back\n",
     "    rotate(f, dir=BWD)\n",
     "\n",
-    "    up = constoprim(u)\n",
-    "\n",
-    "    if np.min(up[:,DENS]) < 0. or np.min(up[:,PRES]) < 0.:   \n",
-    "        raise Exception(\"Negative pressure or density encountered!\")\n",
-    "    \n",
     "    time_step = timestep(up, min_cell_size=0.001)\n",
     "\n",
     "    # add flux to cells \n",
@@ -387,8 +427,9 @@
     "\n",
     "number_of_timesteps = 3000\n",
     "for i_timestep in range(number_of_timesteps): \n",
-    "    u_left, u_right = fill_sides() \n",
-    "    f = calc_flux()\n",
+    "    check_state_physical(u)\n",
+    "    u_left, u_right = fill_sides(u) \n",
+    "    f = calc_flux(u_left, u_right)\n",
     "    u = u + change_of_state(f)"
    ]
   },
@@ -427,7 +468,7 @@
    "source": [
     "### Plot Results\n",
     "\n",
-    "The rest is just plotting... "
+    "The rest is just fancy plotting... we can ignore this part. "
    ]
   },
   {
@@ -436,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot(u_all, index, title):\n",
+    "def fancy_plot(u_all, index, title):\n",
     "\n",
     "    up = constoprim(u_all)\n",
     "    u = up[:,index]\n",
@@ -508,7 +549,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "plot(u, PRES, 'Pressure')"
+    "fancy_plot(u, PRES, 'Pressure')"
    ]
   }
  ],
@@ -528,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
