bugfix in airfoil_flow

--- a/4_airfoil_flow.ipynb
+++ b/4_airfoil_flow.ipynb
@@ -277,7 +277,7 @@
     "    u[:,MOMX] = up[:,VELX] * up[:,DENS]\n",
     "    u[:,MOMY] = up[:,VELY] * up[:,DENS]\n",
     "    u[:,ENER] = up[:,PRES]*2.5 + 0.5* up[:,DENS] * (up[:,VELX]**2 + up[:,VELY]**2)\n",
-    "    return up\n",
+    "    return u\n",
     "\n",
     "\n",
     "def flux(u, up):\n",
