bugfix in airfoil

--- a/4_airfoil_flow.ipynb
+++ b/4_airfoil_flow.ipynb
@@ -290,7 +290,7 @@
     "    return f\n",
     "\n",
     "\n",
-    "def speed_of_sound(up): \n",
+    "def speed_of_sound(up):\n",
     "    return np.sqrt(1.4 * up[:,PRES] / up[:,DENS])\n",
     "\n",
     "def absolute_velocity(up): \n",
@@ -381,26 +381,23 @@
     "    f_left = flux(u_left, up_left) \n",
     "    f_right = flux(u_right, up_right) \n",
     "    f = 0.5 * (f_left + f_right) \n",
-    "\n",
+    "    \n",
     "    a = np.maximum(fastest_wave(up_left), fastest_wave(up_right))\n",
     "    stabilization = -0.5 * a[...,np.newaxis] * (u_right-u_left)\n",
     "    f = f + stabilization\n",
     "    return f\n",
     "\n",
     "def check_state_physical(u):\n",
-    "    up = constoprim(u)\n",
     "    if np.min(up[:,DENS]) < 0. or np.min(up[:,PRES]) < 0.:   \n",
     "        raise Exception(\"Negative pressure or density encountered!\")\n",
     "\n",
     "def timestep(up, min_cell_size): \n",
     "    return 0.99 * min_cell_size / np.max(fastest_wave(up))\n",
     "\n",
-    "def change_of_state(f): \n",
+    "def change_of_state(f, time_step): \n",
     "\n",
     "    # rotate back\n",
     "    rotate(f, dir=BWD)\n",
-    "\n",
-    "    time_step = timestep(up, min_cell_size=0.001)\n",
     "\n",
     "    # add flux to cells \n",
     "    f = f * np.reshape(length,(n_sides,1))\n",
@@ -427,10 +424,12 @@
     "\n",
     "number_of_timesteps = 3000\n",
     "for i_timestep in range(number_of_timesteps): \n",
-    "    check_state_physical(u)\n",
+    "    up = constoprim(u)\n",
+    "    check_state_physical(up)\n",
+    "    time_step = timestep(up, min_cell_size=0.001)\n",
     "    u_left, u_right = fill_sides(u) \n",
     "    f = calc_flux(u_left, u_right)\n",
-    "    u = u + change_of_state(f)"
+    "    u = u + change_of_state(f, time_step)"
    ]
   },
   {
