--- a/1_ball.ipynb
+++ b/1_ball.ipynb
@@ -28,9 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import graph drawing function \n",
+    "# some imports, can be ignored \n",
+    "import os\n",
+    "if not os.path.exists('helpers.py'):\n",
+    "  import urllib.request \n",
+    "  urllib.request.urlretrieve('https://raw.githubusercontent.com/JakobBD/innusint/main/helpers.py', 'helpers.py')\n",
     "from helpers import draw_ball_trajectory\n",
-    "# import math library\n",
     "import numpy as np\n",
     "\n",
     "\n",
