--- a/2_wave_on_river.ipynb
+++ b/2_wave_on_river.ipynb
@@ -22,6 +22,10 @@
    "source": [
     "import numpy as np \n",
     "from matplotlib import pyplot as plt\n",
+    "import os\n",
+    "if not os.path.exists('helpers.py'):\n",
+    "  import urllib.request \n",
+    "  urllib.request.urlretrieve('https://raw.githubusercontent.com/JakobBD/innusint/main/helpers.py', 'helpers.py')\n",
     "from helpers import plot_wave\n",
     "\n",
     "# input parameters\n",
