--- a/4_airfoil_flow.ipynb
+++ b/4_airfoil_flow.ipynb
@@ -44,11 +44,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np  # general math library\n",
-    "import pygmsh  # divides air flow region into triangular cells\n",
     "from matplotlib import pyplot as plt  # plots graphics\n",
     "from matplotlib import colormaps, colors, colorbar, path  # some more libraries to help with plotting\n",
-    "from scipy.interpolate import griddata  # this helps with plotting streamlines of air"
+    "from scipy.interpolate import griddata  # this helps with plotting streamlines of air\n",
+    "try: \n",
+    "    import pygmsh  # divides air flow region into triangular cells\n",
+    "except: \n",
+    "    !pip install pygmsh\n",
+    "    import pygmsh\n",
+    "if not os.path.exists('naca0012.csv'):\n",
+    "  import urllib.request \n",
+    "  urllib.request.urlretrieve('https://raw.githubusercontent.com/JakobBD/innusint/main/naca0012.csv', 'naca0012.csv')"
    ]
   },
   {
